feat: доавил приложение в докер композ

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,3 +11,13 @@ services:
       - 27017:27017
     volumes:
       - ./mongo-data-4.4:/data/db
+
+  top.api:
+    image: top-api:latest
+    container_name: top-api
+    restart: always
+    ports:
+      - "3000:3000"
+    volumes:
+      - ./.env:/opt/app/.env
+
