--- a/package.json
+++ b/package.json
@@ -27,15 +27,26 @@
     "@nestjs/mongoose": "^10.0.1",
     "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/serve-static": "^4.0.0",
+    "@types/app-root-path": "^1.2.5",
+    "@types/fs-extra": "^11.0.1",
+    "@types/sharp": "^0.32.0",
+    "@types/xml2js": "^0.4.11",
+    "app-root-path": "^3.1.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "date-fns": "^2.30.0",
+    "fs-extra": "^11.1.1",
     "mongoose": "^7.4.3",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "webpack": "^5.0.0"
+    "sharp": "^0.32.5",
+    "telegraf": "^4.12.2",
+    "webpack": "^5.0.0",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -44,6 +55,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.7",
     "@types/node": "^20.3.1",
     "@types/passport-jwt": "^3.0.9",
     "@types/supertest": "^2.0.12",
